# intelligent_fan

./: .gitignore  CREDITS  README.md  Record.py  RotateControl.py  hand_tracking_module.py  pyproject.toml  requirements.txt
models/: cough_model.h5
src/: Finger_counter.py  Record.py  SpeedControl.py  cough_detector.py  main.py  rotation_controller.py  settings.py  speed_controller.py
